mobile templates adjustments

--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -581,12 +581,14 @@
                                         [style.width]="'95%'"
                                         [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                         cdkTextareaAutosize
-                                        [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight" style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;
+                                        [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
+                                         style="text-align: center;min-height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;
                                                 animation: bounceIn 500ms ease-in forwards;padding: 0 4px"
                                         class="row-box" [(ngModel)]="testName[columnName]" placeholder="comments"
                                         rows="4" cols="50"></textarea>
                                 </div>
 
+                                <!-- TEST NAME -->
                                 <div style="display: flex;align-items: center;justify-content: space-evenly;">
                                     <mat-icon style="cursor: pointer;position: absolute;left: 48px;
                                     margin-top: -10px;color: #324395;"
@@ -605,7 +607,7 @@
         
         
                                 <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
-                                      columnName.includes('Comments') != true && selectedCard == y &&
+                                      columnName.includes('Comments') != true && selectedCard == y  &&  columnName.includes('RATE') != true &&
                                       columnName.includes('name') != true"
                                     [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
                                     [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
