--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -389,13 +389,24 @@
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
 
     </div>
-    <div class="scroller-style main-container" style="margin-bottom: 45px;" [dragula]="(dragRows)?'DRAGGABLE_ROW':''"
-        [(dragulaModel)]="bmxItem.componentText" (dragulaModelChange)="checkDragEvetn($event);">
+    <div class="scroller-style main-container" style="margin-bottom: 45px;" cdkDropList  
+    (cdkDropListDropped)="checkDragEvetn($event)" 
+    [cdkDropListAutoScrollDisabled]="false"
+     [cdkDropListLockAxis]="'y'">
 
-        <div *ngFor="let testName of bmxItem.componentText; let y = index">
+        <div *ngFor="let testName of bmxItem.componentText; let y = index" cdkDrag>
 
             <!-- <div *ngIf="(y !== 0)" style="color: white;font-size: xx-small;">.</div> -->
             <div class="test-name-table">
+
+                  <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ DRAG AND DROP ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
+                  <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'" 
+                  mat-button style="background-color:#ee7f25 ;color: white;
+                  animation: rubberBand 700ms ease-in  forwards;"
+                  [style.backgroundColor]="(y==0)?'#ee7f25':'#324395'"
+                  [style.fontSize]="(y==0)?'':'30px'"
+                  >{{(y==0)?'Rank':y}}</button>
+
                 <div *ngFor="let columnName of columnsNames; let e =  index"
                     style="display: flex;align-items: center;justify-content: center;"
                     [ngClass]="(columnName.includes('Comments') == true)?'red':'blue'"
@@ -438,6 +449,8 @@
                                 (click)="columnFontSizeAdjust(columnName, 'increase')">add</mat-icon>
                         </div>
                     </div>
+
+                    
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 END HEADER TEXT AREA  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
 
@@ -476,8 +489,9 @@
                             </div>
 
                             <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
-                            <div style="display: flex;">
-                                <button
+                            <!-- <div style="display: flex;"> -->
+                            <div style="display: none;">
+                                <button 
                                     (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
                                     *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;    
                             color: white;
