--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -142,7 +142,7 @@
 
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
-<div *ngIf="i === selectedIndex" class="mat-elevation-z4" 
+<div *ngIf="i === selectedIndex" class="mat-elevation-z4"
     style="position: absolute;width: 62vw;background: #fafafa;z-index: 1;top: -8px;left: 15%;border: lightgrey 3px solid;">
     <div style="position: absolute;
     top: 10px;
@@ -175,8 +175,8 @@
 
         <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Logos</mat-checkbox>
 
-       
-         
+
+
         <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;">
             <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
                 {{bmxItem.componentSettings[0].minRule}}</div>
@@ -307,7 +307,7 @@
 
 
 <!-- 👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧 UPLOAD IMAGES BOX 👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧 -->
-<div *ngIf="uploadImagesBox" class="mat-elevation-z4" 
+<div *ngIf="uploadImagesBox" class="mat-elevation-z4"
     style="position: absolute;width: 62vw;background: #fafafa;z-index: 1;top: -8px;left: 15%;border: lightgrey 3px solid;">
     <div style="position: absolute;
     top: 10px;
@@ -389,23 +389,34 @@
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
 
     </div>
-    <div class="scroller-style main-container" style="margin-bottom: 45px;" cdkDropList  
-    (cdkDropListDropped)="checkDragEvetn($event)" 
-    [cdkDropListAutoScrollDisabled]="false"
-     [cdkDropListLockAxis]="'y'">
+    <div class="scroller-style main-container" style="margin-bottom: 45px;" cdkDropList
+        (cdkDropListDropped)="checkDragEvetn($event)" [cdkDropListAutoScrollDisabled]="false"
+        [cdkDropListLockAxis]="'y'">
 
         <div *ngFor="let testName of bmxItem.componentText; let y = index" cdkDrag>
 
             <!-- <div *ngIf="(y !== 0)" style="color: white;font-size: xx-small;">.</div> -->
             <div class="test-name-table">
 
-                  <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ DRAG AND DROP ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
-                  <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'" 
+                <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ DRAG AND DROP ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
+                <textarea *ngIf="y == 0 && editSingleTableCells"
+                    [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
+                    style="text-align: center; font-weight: bold;color: #324395;width: 65px;" class="row-box"
+                    [(ngModel)]="bmxItem.componentSettings[0].ratingScaleTitle"
+                    value="bmxItem.componentSettings[0].ratingScaleTitle"></textarea>
+
+                <!-- <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop' &&
+                   (!editSingleTableCells && y==0)" 
                   mat-button style="background-color:#ee7f25 ;color: white;
                   animation: rubberBand 700ms ease-in  forwards;"
                   [style.backgroundColor]="(y==0)?'#ee7f25':'#324395'"
                   [style.fontSize]="(y==0)?'':'30px'"
-                  >{{(y==0)?'Rank':y}}</button>
+                  >{{(y==0)?bmxItem.componentSettings[0].ratingScaleTitle:y}}</button> -->
+
+                <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop' &&
+                   (!editSingleTableCells || y!=0)" mat-button style="background-color:#ee7f25 ;color: white;
+                  animation: rubberBand 700ms ease-in  forwards;" [style.backgroundColor]="(y==0)?'#ee7f25':'#324395'"
+                    [style.fontSize]="(y==0)?'':'30px'">{{(y==0)?bmxItem.componentSettings[0].ratingScaleTitle:y}}</button>
 
                 <div *ngFor="let columnName of columnsNames; let e =  index"
                     style="display: flex;align-items: center;justify-content: center;"
@@ -418,13 +429,8 @@
                 bmxItem.componentSettings[0].columnWidth + 'px'">
 
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
-                    <div *ngIf="(y == 0)" class="header-title " (mouseenter)="selectedColumn = e"
-                        (mouseleave)="selectedColumn = ''">
+                    <div *ngIf="(y == 0)" class="header-title " (mouseenter)="selectedColumn = e">
                         <div style="display: flex;flex-direction: row;justify-content: space-between;">
-
-                            <span *ngIf="selectedColumn === e && bmxClientPageOverview" class="header-delete-icon"
-                                matTooltip="double click to delete column" matTooltipPosition="above"
-                                (dblclick)="deleteColumn(columnName)">x</span>
 
                             <textarea *ngIf="editSingleTableCells"
                                 [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
@@ -435,22 +441,27 @@
                                 [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                 *ngIf=" !editSingleTableCells">{{testName[columnName]}}
                             </p>
-                            <mat-icon *ngIf="selectedColumn === e && bmxClientPageOverview" style="cursor: pointer;"
-                                (click)="swapColumns(e)">chevron_right</mat-icon>
+                            <div *ngIf="selectedColumn === e && bmxClientPageOverview && !editSingleTableCells" style="display: flex;flex-direction: row;justify-content: space-around;
+                            position: absolute;top: 35px;background: white;border: #324395 dashed 1px;"
+                                (mouseleave)="selectedColumn = ''">
+                                <span class="header-delete-icon" matTooltip="double click to delete column"
+                                    matTooltipPosition="above" (dblclick)="deleteColumn(columnName)">x</span>
+                                <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
 
-                            <mat-icon *ngIf="selectedColumn === e && bmxClientPageOverview" style="cursor: pointer;"
-                                (click)="columnFontSizeAdjust(columnName, 'decrease')">remove</mat-icon>
+                                <mat-icon style="cursor: pointer;"
+                                    (click)="columnFontSizeAdjust(columnName, 'decrease')">
+                                    remove</mat-icon>
 
-                            <mat-icon *ngIf="selectedColumn === e && bmxClientPageOverview" style="cursor: pointer;">
-                                text_format
-                            </mat-icon>
+                                <mat-icon style="cursor: pointer;">text_format</mat-icon>
 
-                            <mat-icon *ngIf="selectedColumn === e && bmxClientPageOverview" style="cursor: pointer;"
-                                (click)="columnFontSizeAdjust(columnName, 'increase')">add</mat-icon>
+                                <mat-icon style="cursor: pointer;"
+                                    (click)="columnFontSizeAdjust(columnName, 'increase')">
+                                    add</mat-icon>
+                            </div>
                         </div>
                     </div>
 
-                    
+
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 END HEADER TEXT AREA  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
 
@@ -491,7 +502,7 @@
                             <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                             <!-- <div style="display: flex;"> -->
                             <div style="display: none;">
-                                <button 
+                                <button
                                     (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
                                     *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;    
                             color: white;
@@ -546,7 +557,7 @@
                             class="row-box" [(ngModel)]="testName[columnName]" rows="4" cols="50"></textarea>
 
 
-                        <img  class="row-box" style="width: 300px;" [src]="testName[columnName]"
+                        <img class="row-box" style="width: 300px;" [src]="testName[columnName]"
                             *ngIf="(y !== 0) && (columnName == 'name' || columnName == 'nameCandidates')">
 
 
@@ -591,9 +602,8 @@
         <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;">
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
     </div>
-    <div class="scroller-style main-container" cdkDropList  (cdkDropListDropped)="checkDragEvetn($event)" 
-    [cdkDropListAutoScrollDisabled]="false"
-     [cdkDropListLockAxis]="'y'">
+    <div class="scroller-style main-container" cdkDropList (cdkDropListDropped)="checkDragEvetn($event)"
+        [cdkDropListAutoScrollDisabled]="false" [cdkDropListLockAxis]="'y'">
 
         <div *ngFor="let testName of bmxItem.componentText; let y = index" style="margin-bottom: 10px;" cdkDrag>
 
@@ -606,7 +616,7 @@
                     position: absolute;animation: rubberBand 700ms ease-in  forwards;"
                     mat-icon-button>{{bmxItem.componentText[y]['RATE']}}</button>
 
-                    <button *ngIf=" y != 0  " style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
+                <button *ngIf=" y != 0  " style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
                     height: 30px;
                     line-height: 30px;right: 7px;
                     position: absolute;animation: rubberBand 700ms ease-in  forwards;" mat-icon-button>{{y}}</button>
