--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.scss
@@ -117,7 +117,9 @@
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    // overflow-x: scroll;
+    // IF YOU WANT TO CHANGE TO AUTOSCROLL
+    overflow-x: scroll;
+    height: 46vh;
   }
   
   .rating-text {
