--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -29,6 +29,10 @@
             mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
         </button>
+        <button (click)="setPronunciation()" class="add-column" matTooltip="speech" matTooltipPosition="above"
+            mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">mic</mat-icon>
+        </button>
     </div>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
@@ -65,7 +69,7 @@
         <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryName"
             [value]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name"
             style="font-size: 20px;color: #324395;padding-bottom: 10px;">
-            <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
+        <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
         <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
             [value]="bmxItem.componentSettings[0].categoryDescription" placeholder="Category Description"
             style="font-size: 20px;color: #ee7f25;padding-bottom: 20px;">
@@ -79,6 +83,7 @@
             aria-label="ranking">
             <mat-icon>cancel</mat-icon><br>Cancel
         </button>
+
         <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
             (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" aria-label="ranking">
             <mat-icon>check_circle</mat-icon><br> DONE
@@ -126,14 +131,16 @@
                     <mat-icon (click)="voteName('negative')" style="font-size: 65px;color: #ee252f;cursor: pointer;"
                         class="full-icon">highlight_off</mat-icon>
 
+                    <mat-icon style="cursor: pointer;color: #324395;" 
+                    (click)="playTestNameSound(bmxItem.componentText[testNameIndex].nameCandidates)"
+                        *ngIf="y !== 0  && !editSingleTableCells && displaySound">
+                        volume_up
+                    </mat-icon>
 
                     <mat-icon (click)="voteName('positive')" style="font-size: 65px;color: #00cd38;cursor: pointer;"
                         class="full-icon">sentiment_satisfied_alt</mat-icon>
-
                 </div>
-
             </div>
-
             <mat-icon (click)="moveRight()" style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
                 chevron_right</mat-icon>
 
