--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -133,7 +133,7 @@
 
                     <mat-icon style="cursor: pointer;color: #324395;" 
                     (click)="playTestNameSound(bmxItem.componentText[testNameIndex].nameCandidates)"
-                        *ngIf="y !== 0  && !editSingleTableCells && displaySound">
+                        *ngIf="!editSingleTableCells && displaySound">
                         volume_up
                     </mat-icon>
 
