--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -143,10 +143,10 @@
                         <mat-icon class="full-icon">chevron_left</mat-icon>
                     </button> -->
                     <button  style="background: #324395;color: white;" *ngIf="isBrandMatrixSurvey && surveyLanguage != 'Japanese'" (click)="changePage('previous')" mat-raised-button>
-                        <mat-icon class="full-icon">chevron_left</mat-icon> Previous
+                        <mat-icon class="full-icon">chevron_left</mat-icon> <span class="menu-descriptions">Previous</span>
                     </button>
                     <button  style="background: #324395;color: white;" *ngIf="isBrandMatrixSurvey && surveyLanguage == 'Japanese'" (click)="changePage('previous')" mat-raised-button>
-                        <mat-icon class="full-icon">chevron_left</mat-icon> 戻る
+                        <mat-icon class="full-icon">chevron_left</mat-icon> <span class="menu-descriptions">戻る</span>
                     </button>
                     <div *ngFor="let page of bmxPagesClient; let pageIndex = index">
                         <button disableRipple style="min-width: 35px;cursor: auto;outline: none;"
@@ -160,10 +160,10 @@
                         </button> -->
                     </div>
                     <button  style="background: #324395;color: white;" *ngIf="isBrandMatrixSurvey && surveyLanguage != 'Japanese'" (click)="changePage('next')" mat-raised-button>
-                        Continue <mat-icon class="full-icon">chevron_right</mat-icon>
+                        <span class="menu-descriptions">Continue</span> <mat-icon class="full-icon">chevron_right</mat-icon>
                      </button>
                     <button  style="background: #324395;color: white;" *ngIf="isBrandMatrixSurvey && surveyLanguage == 'Japanese'" (click)="changePage('next')" mat-raised-button>
-                        続き <mat-icon class="full-icon">chevron_right</mat-icon>
+                        <span class="menu-descriptions">続き </span><mat-icon class="full-icon">chevron_right</mat-icon>
                      </button>
                     <!-- <button *ngIf="isBrandMatrixSurvey" (click)="changePage('next')" mat-icon-button>
                         <mat-icon class="full-icon">chevron_right</mat-icon>
