lottie sphere colors updates

--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -192,7 +192,7 @@
     z-index: 999;    
     width: 465px;animation: 
     fadeIn 3s ease 4s forwards;" slot="end" autoplay loop
-    [src]="'./assets/img/cube.json'">
+    [src]="'./assets/img/cubo.json'">
 </lottie-player>
 <lottie-player class="lottie-player" *ngIf="loadingLottie" style="
     position: absolute;
@@ -200,7 +200,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 999;    
-    width: 80px;animation: 
+    width: 140px;animation: 
     fadeIn 3s ease 4s forwards;" slot="end" autoplay loop
-    [src]="'./assets/img/sphere.json'">
+    [src]="'./assets/img/esfera.json'">
 </lottie-player>
