--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -40,7 +40,7 @@
   // animation: bounce 1000ms 1000ms ease-in-out  forwards  ;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 913x) {
   .desktop {
     display: flex;
     flex-direction: column;
@@ -57,7 +57,7 @@
   }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 912px) {
   .desktop {
     display: none;
   }
