ajuste hight line

--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.scss
@@ -10,3 +10,10 @@
 .edit-icon {
     display: none;   
 }
+
+@media (max-width: 912px){
+    .paragram-mobile{
+        line-height: 25px;
+    }
+  
+}
