update texto new names

--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -162,7 +162,7 @@
             </div>
             <div flex="" class="text-center flex" style="margin-right:10px">
                 <p>2.
-                    Enter name suggestions</p>
+                    Enter new names</p>
                 <img class="instruction-style" src="assets/img/bsr/page_creation.JPG" alt="Candidates">
             </div>
             <div flex="" class="text-center flex">
