--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -654,7 +654,7 @@
                                 cdkTextareaAutosize [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight" style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;
                                 animation: bounceIn 500ms ease-in forwards;padding: 0 4px;margin-bottom: 10px;"
                                 class="row-box" [(ngModel)]="testName[columnName]"
-                                 [placeholder]="(columnName=='Comments0')?'comments':(columnName=='Comments1')?'name suggestions':'type here' " rows="4"
+                                 [placeholder]="(columnName=='Comments0')?'comments':(columnName=='Comments1')?'new names':'type here' " rows="4"
                                 cols="50">
                             </textarea>                            
                         </div>
