--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -1,3 +1,13 @@
+<!-- <app-show-video></app-show-video> -->
+<div *ngIf="showModalVideo" id="myModal" class="modal-video">
+    <div class="modal-content">
+        <span class="close-modal" (click)="showModalVideo=false">&times;</span>
+        <video autoplay  muted="muted" playsinline loop #videoLand>
+            <source [src]="videoPath" type="video/mp4">
+                Your browser does not support the video tag.
+        </video>
+    </div>
+</div>
 <button *ngIf="openSettings && bmxClientPageOverview" class="cancel" (click)=" replaceBiI_Markers(); openSettings = !openSettings"
     mat-icon-button>
     <mat-icon class="full-icon" style="font-size: 25px;">check_circle</mat-icon>
@@ -11,8 +21,9 @@
     <ckeditor *ngIf="openSettings && bmxClientPageOverview" id="txtTexto" class="ckeditorcev"
         style="animation: fadeIn 0.5s ease forwards;" [ngModelOptions]="{standalone: true}"
         [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText" [config]="ckconfig">
-    </ckeditor>
+    </ckeditor>    
 </div>
+
 
 <!-- <div style="display: flex;justify-content: space-around; align-items: center;width: 90vw;">
     <div style="text-align: left;width: 400px;">
